docs/v0.2.3/_sources/gallery/index.rst.txt
:orphan:

Examples: Tutorials
===================


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use TradeTide&#x27;s Backtester class for automated strategy evaluation. The Backtester streamlines the entire workflow by handling position management, portfolio simulation, and performance analysis automatically.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_backtester_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_backtester.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automated Backtesting with Bollinger Bands Strategy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Bollinger Bands indicator with the TradeTide library.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_bollinger_bands_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_bollinger_bands.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bollinger Bands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Moving Average Crossings indicator with the TradeTide library.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_moving_average_crossings_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_moving_average_crossings.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Moving Average Crossings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use the Relative Momentum Index (RMI) indicator">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_relative_momentum_index_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_relative_momentum_index.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Relative Momentum Index</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This comprehensive example demonstrates a complete end-to-end trading workflow using the TradeTide library. We&#x27;ll build a Bollinger Bands-based trading strategy, backtest it on historical CAD/USD data, and analyze the results.">

.. only:: html

  .. image:: /gallery/images/thumb/sphx_glr_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Complete Trading Strategy Workflow with Bollinger Bands</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/backtester
   /gallery/bollinger_bands
   /gallery/moving_average_crossings
   /gallery/relative_momentum_index
   /gallery/workflow



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
